--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,7 @@
-body { background: red; }
+@import "content.less";
+
+body {
+    background-color: tomato;
+    font-family: sans-serif;
+    color: #fff;
+}
