добавляет розовый фон в style.less

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,7 @@
 @import "content.less";
 
 body {
-    background-color: tomato;
+    background-color: pink;
     font-family: sans-serif;
     color: #fff;
 }
