--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,18 @@
 @import "content.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/site-list.less";
+@import "blocks/page-main.less";
+@import "blocks/applications-page.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/description.less";
+@import "blocks/advantages.less";
+@import "blocks/reviews.less";
+@import "blocks/slider.less";
+@import "blocks/rate.less";
+@import "blocks/toggle.less";
+@import "blocks/info.less";
+@import "blocks/map.less";
 
 body {
     background-color: pink;
