добавляет стили в source/less/blocks/page-header.less

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,7 +1,8 @@
 .page-header {
+    width: 320px;
+    height: 64px;
     background-color: #182164;
-    font-family: OpenSans, Arial,sans-serif;
-    font-size: 24px;
-    line-height: normal;
+    font-family: OpenSans, Arial, sans-serif;
     color: #fff;
+    box-shadow: 0px 1px 0 0 var(--black-two);
 }
