добавляет стили в файлы blocks

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -6,5 +6,12 @@
     font-size: 18px;
     font-weight: bold;
     line-height: 1.78;
+    text-align: center;
+}
+
+.main-nav__wrapper {
+    text-align: center;
+    margin-left: 320px;
+    margin-top: 50px;
 
 }
