--- a/source/less/content.less
+++ b/source/less/content.less
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
-    font-family: OpenSans, Arial,sans-serif;
-    font-size: 24px;
+    display: flex;
+    margin: auto;
+    font-family: OpenSans, Arial, sans-serif;
 }
