--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -3,3 +3,12 @@
     color: #000;
     text-align: center;
 }
+
+.page-main__iphone {
+    margin-top: 200px;
+}
+
+.btn__iphone {
+    padding: 20px, 39px;
+    margin-right: 200px;
+}
