добавляет изменения в файлы

--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,7 +1,9 @@
-@lipstic-color: #d22856;
-@gr-color: #2aab6d;
-@dark-color: #283645;
-@light-color: #ffffff;
-@border-color: #e5e5e5;
+@lipstic: #d22856;
+@green: #2aab6d;
+@dark: #283645;
+@white: #ffffff;
+@border: #e5e5e5;
+@tablet-width: 768px;
+@desktop-width: 1200px;
 
 
