--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -7,11 +7,21 @@
     font-weight: bold;
     line-height: 1.78;
     text-align: center;
+    margin: 0 auto;
 }
 
 .main-nav__wrapper {
-    text-align: center;
-    margin-left: 320px;
-    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 320px;
+    margin: 0 auto;
 
+}
+
+.main-nav__list {
+    width: 320px;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
 }
