--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,9 +1,18 @@
 body {
-    width: 320px;
-    font-family: OpenSans, Arial, sans-serif;
-}
-
-a {
-    text-decoration: none;
-    
-}
+    min-width: 320px;
+    margin: 0;
+    padding: 0;
+  
+    font-size: 18px;
+    line-height: 27px;
+    font-family: "OpenSans", "Arial", sans-serif;
+    color: #fff;
+    font-style: normal;
+  
+    background-color: @dark;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
