--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,10 +1,18 @@
 .page-header {
     width: 320px;
     height: 321px;
-    background-color: #182164;
+    background-color: pink;
     font-family: OpenSans, Arial, sans-serif;
     color: #fff;
     box-shadow: 0px 1px 0 0 var(--black-two);
+}
+
+.page-header__logo {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+    padding-top: 22px;
+    padding-bottom: 22px;
 }
 
 
