добавляет правки в  source/less/style.less

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,4 +13,9 @@
 @import "blocks/toggle.less";
 @import "blocks/info.less";
 @import "blocks/map.less";
-
+@import "blocks/btn-header.less";
+@import "blocks/gallery-page.less";
+@import "variables.less";
+@import "global.less";
+@import "mixins.less";
+@import "font.less";
