--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,13 +1,19 @@
 .advantages {
-    width: 320px;
+
 }
 
-.advantages__header--heading {
-    font-size: 24px;
-    font-weight: 300;
-    line-height: normal;
-    text-align: center;
-    color: var(--dark);
+.advantages__container {
+    .container();
+}
+
+.advantages__header  {
+    &--heading {
+        font-size: 24px;
+        font-weight: 300;
+        line-height: normal;
+        text-align: center;
+        color: var(--dark);
+    }
 }
 
 .advantages__mood {
