--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,5 +1,4 @@
 .page-main {
-    font-family: OpenSans, Arial, sans-serif;
     color: #000;
     text-align: center;
 }
@@ -9,6 +8,6 @@
 }
 
 .btn__iphone {
-    padding: 20px, 39px;
+    padding: 20px 39px;
     margin-right: 200px;
 }
