--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,7 +1,10 @@
 @lipstic-color: #d22856;
 @gr-color: #2aab6d;
 @dark-color: #283645;
-@light-color: #ffffff;
+@white-color: #ffffff;
 @border-color: #e5e5e5;
+@tablet-width: 660px;
+@desktop-width: 990px;
+
 
 
