--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,8 +1,6 @@
 .main-nav {
-    width: 320px;
-    height: 252px;
     box-shadow: 0px 1px 0 0 var(--black-two), inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
-    font-family: OpenSans, Arial, sans-serif;
+    font-family: "OpenSans", "Arial", sans-serif;
     font-size: 18px;
     font-weight: bold;
     line-height: 1.78;
@@ -13,5 +11,4 @@
     text-align: center;
     margin-left: 320px;
     margin-top: 50px;
-
 }
