--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,9 +1,46 @@
-body {
-    width: 320px;
-    font-family: OpenSans, Arial, sans-serif;
+ html,
+ body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
-    
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
+
+body {
+    min-width: 320px;
+    margin: 0;
+    padding: 0;
+  
+    font-size: 14px;
+    line-height: 1.71;
+    font-family: "OpenSans", "Arial", sans-serif;
+    color: #ffffff;
+    font-style: normal;
+  
+    background-color: @dark-color;
+}
+  
+  img {
+    max-width: 100%;
+    height: auto;
+}
+
+ .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
+}
+
+ 
+
+ 
