--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,7 @@
-
+@import "font.less";
+@import "variables.less";
+@import "global.less";
+@import "mixins.less";
 @import "content.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
