--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -12,7 +12,7 @@
         font-weight: 300;
         line-height: normal;
         text-align: center;
-        color: var(--dark);
+        color: @dark-color;
     }
 }
 
@@ -21,7 +21,7 @@
     font-weight: bold;
     line-height: 1.71;
     text-align: center;
-    color: var(--dark);
+    color: @dark-color;
 }
 
 .advantages__description {
@@ -29,6 +29,6 @@
     font-weight: normal;
     line-height: 1.71;
     text-align: center;
-    color: var(--dark);
+    color: @dark-color;
 }
 
