--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,14 +1,46 @@
 .main-nav {
+    display: flex;
+    flex-direction: column;
     box-shadow: 0px 1px 0 0 var(--black-two), inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
-    font-family: "OpenSans", "Arial", sans-serif;
+    background-color: @dark-color;
     font-size: 18px;
     font-weight: bold;
     line-height: 1.78;
-    text-align: center;
+    min-width: 320px;
+    margin: 0 auto;
+} 
+
+.main-nav__list {
+    margin: 0;
+    padding: 0;
+  
+    list-style: none;
+}
+
+@media (min-width: @tablet-width) {
+    .main-nav {
+        width: auto;
+        margin: 0;
+    }
 }
 
 .main-nav__wrapper {
-    text-align: center;
-    margin-left: 320px;
-    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    width: 660px;
+    margin: 0 auto;
+  }
+.site-list__item {
+    width: 570px;
+    min-height: 63px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+    .main-nav__wrapper {
+        width: 960px;
+      }
+      .site-list {
+        width: 780px;
+    }
 }
