--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,10 +1,15 @@
 .page-main {
-    color: #000;
-    text-align: center;
-}
+    min-width: 320px;
+    margin: 0 auto;
+      
+    /* Временно для сетки */
+    min-height: 784px;
+    }
+      
 
 .page-main__iphone {
-    margin-top: 200px;
+    padding-top: 33px;
+    padding-bottom: 60px;
 }
 
 .btn__iphone {
