--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,7 +1,8 @@
-.site-list {
-    font-family: OpenSans, Arial, sans-serif;
+.site-list__item {
+    display: flex;
+    flex-direction: column;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    color: var(--white);
+    color: @white-color;
 }
