--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -16,3 +16,13 @@
     padding: 20px 39px;
     margin-right: 200px;
 }
+
+@media (min-width: @tablet-width) {
+    .page-main {
+        width: 660px;
+        margin-top: -185px;
+    
+        /* Временно для сетки */
+        min-height: 0;
+    }
+}
