--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,6 @@
 .main-nav {
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 1px 0 0 var(--black-two), inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
     background-color: @dark-color;
     font-size: 18px;
     font-weight: bold;
@@ -13,8 +12,6 @@
 .main-nav__list {
     margin: 0;
     padding: 0;
-  
-    list-style: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -29,11 +26,12 @@
     justify-content: center;
     width: 660px;
     margin: 0 auto;
-  }
+}
 
 .site-list__item {
     width: 570px;
     min-height: 63px;
+    color: @white-color;
   }
  
 @media (min-width: @desktop-width) {
