--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,11 @@
 .page-header {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     background-color: @dark-color;
+}
+
+.page-header__logo {
+    justify-content: flex-start;
 }
 
 .page-header__logo_image {
