--- a/source/less/global.less
+++ b/source/less/global.less
@@ -19,18 +19,16 @@ body {
     font-size: 14px;
     line-height: 1.71;
     font-family: "OpenSans", "Arial", sans-serif;
-    color: #ffffff;
     font-style: normal;
   
-    background-color: @dark-color;
 }
   
-  img {
+img {
     max-width: 100%;
     height: auto;
 }
 
- .visually-hidden {
+.visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -39,6 +37,13 @@ body {
     padding: 0;
     clip: rect(0, 0, 0, 0);
     overflow: hidden;
+}
+
+a {
+  list-style: none;
+  color: @white-color;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
  
