--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -1,11 +1,40 @@
 .description {
-    width: 229px;
     height: 37px;
     font-size: 14px;
     font-weight: 300;
-    color: var(--white);
+    color: @white-color;
     line-height: 1.71;
     text-align: center;
-    margin-top: -60px;
-    margin-left: 45px;
+    margin: 29px 45px;
+   
+}
+
+@media (min-width: @tablet-width) {
+    .description {
+        width: 294px;
+        height: 41px;
+        font-size: 18px;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.33;
+        color: @white-color;
+        margin-right: 22px;
+        margin-top: 44px;
+    } 
+}
+
+@media (min-width: @desktop-width) {
+    .description {
+        width: 294px;
+        height: 41px;
+        font-size: 18px;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.33;
+        color: @white-color;
+        margin-top: 60px;
+        margin-right: 132px;
+    }
 }
