--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -3,8 +3,9 @@
 @dark-color: #283645;
 @white-color: #ffffff;
 @border-color: #e5e5e5;
+@light-grey: #f2f2f2;
 @tablet-width: 660px;
-@desktop-width: 1200px;
+@desktop-width: 960px;
 
 
 
