--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -25,10 +25,16 @@
       }
     }
 
-    .page-header__burger-menu {
+    .burger-menu {
+        width: 50px;
+        height: 24px;
         height: 24px;
         margin-left: 20px;
         padding: 20px;  
+    }
+
+    .icon icon-burger {
+        fill: @white-color;
     }
 
     @media (min-width: @tablet-width) {
