--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -6,48 +6,29 @@
 
 .page-header__logo {
     justify-content: flex-start;
-}
-
-.page-header__logo_image {
-    justify-content: flex-start;
-    width: 75px;
-    height: 22px;
-    padding: 20px; 
-    fill: @white-color; 
+    padding: 20px;
 }
 
 .btn-header__close {
     justify-content: flex-end;
     width: 24px;
     height: 23px;
+    padding: 20px;
+    margin-left: 150px;
+    margin-top: 5px;
+   
 }
 
 @media (min-width: @tablet-width) {
-    .page-header__logo_image {
+    .page-header__logo {
         height: 40px;
     }
 }
 
 @media (min-width: @desktop-width) {
-    .page-header__logo_image {
+    .page-header__logo {
         height: 40px;
       }
-    }
-
-    .icon icon-burger {
-        fill: @white-color;
-    }
-
-    @media (min-width: @tablet-width) {
-        .page-header__burger-menu {
-            height: 24px;
-        }
-    }
-
-    @media (min-width: @desktop-width) {
-        .page-header__burger-menu {
-            display: none;
-        }
     }
 
 
