--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -3,6 +3,7 @@
     min-width: 320px;
     margin: 0 auto;
     margin-top: 200px;
+    background-color: @dark-color;
 }
 
 .page-main__name {
@@ -13,10 +14,13 @@
     line-height: normal;
     text-align: center;
     color: @white-color;
+    background-color: @dark-color;
     margin-top: 50px;
 }
 
 .page-main__iphone {
+    width: 320px;
+    height: 314px;
     padding-top: 33px;
     padding-bottom: 60px;
 }
