--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -35,4 +35,8 @@
     padding: 20px 39px;
     border: 3px solid @white-color;
     border-radius: 30%;
+    text-align: center;
+    position: absolute;
+    left: 20px;
+    top: 200px;
 }
