--- a/source/less/blocks/applications-page.less
+++ b/source/less/blocks/applications-page.less
@@ -1,27 +1,20 @@
 .applications-page {
     display: flex;
     min-width: 320px;
-    justify-content: space-around;
-    height: 306px;
-    background-color: @dark-color; 
+    background-color: @dark-color;
+    margin-top: 220px; 
+    margin-left: 10px;
+    
+    
+}
+
+.applications-page_apple {
+   margin-right: -200px;
+}
+
+.applications-page_android {
+    margin-right: -200px;
 
 }
 
-@media (min-width: @tablet-width) {
-    .applications-page {
-        display: flex;
-        justify-content: space-around;
-        margin-right: 66px;
-        margin-top: 46px;
-    }
-}
-
-@media (min-width: @desktop-width) {
-    .applications-page {
-        display: flex;
-        justify-content: space-around;
-        margin-right: 177px;
-        margin-top: 67px;
-    }
-}
 
