--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -1,40 +1,12 @@
-.description {
-    height: 37px;
+.description {   
+    width: 229px;
     font-size: 14px;
     font-weight: 300;
     color: @white-color;
+    background-color: @dark-color;
     line-height: 1.71;
     text-align: center;
-    margin: 29px 45px;
-   
-}
-
-@media (min-width: @tablet-width) {
-    .description {
-        width: 294px;
-        height: 41px;
-        font-size: 18px;
-        font-weight: 300;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.33;
-        color: @white-color;
-        margin-right: 22px;
-        margin-top: 44px;
-    } 
-}
-
-@media (min-width: @desktop-width) {
-    .description {
-        width: 294px;
-        height: 41px;
-        font-size: 18px;
-        font-weight: 300;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.33;
-        color: @white-color;
-        margin-top: 60px;
-        margin-right: 132px;
-    }
+    position: absolute;
+    bottom: -195px;
+    right: 80px;  
 }
