--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -40,3 +40,27 @@
     left: 20px;
     bottom: -240px;
 }
+
+@media (min-width: @tablet-width) {
+    .page-main__name {
+        font-size: 40px;
+        font-weight: 300;
+        font-stretch: normal;
+        line-height: normal;
+        margin-right: 78px;
+        margin-top: 103px;
+    }
+}
+
+@media (min-width: @tablet-width) {
+    .btn__iphone {
+        width: 300px;
+        height: 55px;
+        margin-top: 39px;
+        margin-right: 20px;
+        font-size: 18px;
+        font-weight: bold;
+        text-align: center;
+        padding: 20px 49px;
+    }
+}
