--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -42,6 +42,14 @@
 }
 
 @media (min-width: @tablet-width) {
+    .page-main {
+        display: flex;
+        justify-content: space-around;
+        width: auto;
+    }
+}
+
+@media (min-width: @tablet-width) {
     .page-main__name {
         font-size: 40px;
         font-weight: 300;
@@ -57,10 +65,20 @@
         width: 300px;
         height: 55px;
         margin-top: 39px;
-        margin-right: 20px;
+        margin-left: 150px;
         font-size: 18px;
         font-weight: bold;
         text-align: center;
         padding: 20px 49px;
+        position: relative;
     }
+}
+
+@media (min-width: @tablet-width) {
+    .page-main__iphone {
+        display: flex;
+        justify-content: flex-end;
+        margin-left: 30px;
+    }
+
 }
