--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,11 +5,12 @@
 }
 
 .btn-header__close {
-    justify-content: flex-end;
     width: 24px;
     height: 23px;
     padding: 20px;
-    margin-left: 150px;
+    margin-left: auto;
+    position: relative;
+    right: 30px;
     margin-top: 5px;
    
 }
