--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,8 +1,14 @@
 .site-list__item {
-    display: flex;
-    flex-direction: column;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
     color: @white-color;
+    box-shadow: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
+
+}
+
+.site-list__link {
+    display: block;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
