--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,45 +1,61 @@
 .page-header {
-    display: flex;
-    min-width: 320px;
+    position: relative;
     background-color: @dark-color;
 }
 
-.btn-header__close {
-    width: 24px;
-    height: 23px;
-    padding: 20px;
+.page-header__logo {
+    display: block;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.page-header__close {
+    content: "";
+    position: absolute;
+    top: 21px;
+    right: 19px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+
+
+// .page-header__logo_mobile {
+    
+  
+// }
+
+.page-header__logo_tablet {
+    display: none;
+}
+
+.btn-header__close_icon {
+    display: flex;
     margin-left: auto;
-    position: relative;
-    right: 30px;
-    margin-top: 5px;
-   
 }
 
-@media (min-width: 320px) {
-    .icon icon-mobile {
-        justify-content: flex-start;
-        padding: 20px;
-    }
+.page-main__example {
+    background-image: url(../img/iphone-5-in-hand-png.png),url(../img/back-tablet-1-x.png);
+    background-repeat: no-repeat;
 }
-
-@media (min-width: 320px) {
-    .icon icon-tablet {
-        display: none;
-    }
-}
-
 
 @media (min-width: @tablet-width) {
-    .icon icon-tablet {
+   
+    .page-header__logo_mobile {
+        display: none;
+    }
+
+    .page-header__logo_tablet {
+        display: block;
         height: 40px;
     }
 }
 
-@media (min-width: @tablet-width) {
-    .icon icon-mobile {
-        display: none;
-    }
-}
+
+
+
 
 
 
