--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -6,10 +6,6 @@
     margin: 0 auto;
 }
 
-
-
-
-
 .page-main__name {
     font-size: 24px;
     font-weight: 300;
@@ -52,35 +48,36 @@
         width: auto;
 
     }
+}
     // .page-main {
     //     display: flex;
     //     justify-content: space-around;
     //     width: auto;
     // }
 
-    .page-main__name {
-        font-size: 40px;
-        font-weight: 300;
-        font-stretch: normal;
-        line-height: normal;
-        margin-right: 78px;
-        margin-top: 130px;
-    }
+//     .page-main__name {
+//         font-size: 40px;
+//         font-weight: 300;
+//         font-stretch: normal;
+//         line-height: normal;
+//         margin-right: 78px;
+//         margin-top: 130px;
+//     }
 
-    .btn__iphone {
-        width: 300px;
-        height: 55px;
-        margin-top: 39px;
-        margin-left: 150px;
-        font-size: 18px;
-        font-weight: bold;
-        text-align: center;
-        padding: 20px 49px;
-        position: relative;
-        border: solid 3px @white-color;
-    }
-    .page-main__iphone {
-        display: flex;
-        margin-right: auto;
-    }
-}
+//     .btn__iphone {
+//         width: 300px;
+//         height: 55px;
+//         margin-top: 39px;
+//         margin-left: 150px;
+//         font-size: 18px;
+//         font-weight: bold;
+//         text-align: center;
+//         padding: 20px 49px;
+//         position: relative;
+//         border: solid 3px @white-color;
+//     }
+//     .page-main__iphone {
+//         display: flex;
+//         margin-right: auto;
+//     }
+// }
