--- a/source/less/blocks/applications-page.less
+++ b/source/less/blocks/applications-page.less
@@ -8,7 +8,11 @@
 
 
 @media (min-width: @tablet-width) {
-
+    .applications-wrapper {
+        display: flex;
+        justify-content: space-around;
+        width: auto;
+    }
 }
 
 
