--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,15 +1,26 @@
-.advantages {
-    display: flex;
-    min-width: 320px;
-}
-.advantages__container {
-    flex-direction: column;
-    flex-wrap: wrap;
-    position: absolute;
-    top: 900px;
-    right: 50px;
+// .advantages {
+//     display: flex;
+//     min-width: 320px;
+// }
+// .advantages__container {
+//     flex-direction: column;
+//     flex-wrap: wrap;
+//     position: absolute;
+//     top: 900px;
+//     right: 50px;
+// }
 
+.advantages__container {
+    margin: 0 auto;
 }
+
+.advantages__header {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+
  
 .advantages__header  {
     font-size: 24px;
