--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -17,8 +17,19 @@
 .advantages__header {
     margin: 0;
     padding: 0;
-    list-style: none;
+    margin-bottom: 100px; 
 }
+
+.advantages__mood {
+    list-style: none;
+    margin-bottom: 40px;
+}
+
+.advantages__description {
+    list-style: none;
+    margin-bottom: 40px;
+}
+
 
 
  
