--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -30,44 +30,83 @@
     margin-bottom: 40px;
 }
 
+@media (min-width: @tablet-width) {
+    .advantages__container {
+        width: auto;
+        display: flex;
+        justify-content: space-between;
+
+    }
+    .advantages__header {
+        font-size: 40px;
+        font-weight: 300;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: @dark-color;
+    }
+    .advantages__mood {
+        font-size: 18px;
+        font-weight: bold;
+        font-style: normal;
+        line-height: 1.71;
+        letter-spacing: normal;
+        text-align: left;
+        color: @black;
+    }
+    .advantages__description {
+        font-size: 14px;
+        font-weight: normal;
+        letter-spacing: normal;
+        text-align: left;
+        color: @black;
+    }
+    .advantages__iphone {
+        background-image: url(img/iphone-screen-3.png);
+        width: 268px;
+        height: 547px;
+        object-fit: contain;
+    }
+}
 
 
  
-.advantages__header  {
-    font-size: 24px;
-    font-weight: 300;
-    line-height: normal;
-    text-align: center;
-    color: @dark-color;
-    margin-left: 60px;
-    margin-right: 60px;
-    margin-top: 100px;
-    margin-bottom: 119px;
-    background-color: @white-color;
-}
+// .advantages__header  {
+//     font-size: 24px;
+//     font-weight: 300;
+//     line-height: normal;
+//     text-align: center;
+//     color: @dark-color;
+//     margin-left: 60px;
+//     margin-right: 60px;
+//     margin-top: 100px;
+//     margin-bottom: 119px;
+//     background-color: @white-color;
+// }
 
-.advantages__mood {
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 1.71;
-    text-align: center;
-    color: @dark-color;
-    background-color: @light-grey;
-    margin-left: 30px;
-}
+// .advantages__mood {
+//     font-size: 18px;
+//     font-weight: bold;
+//     line-height: 1.71;
+//     text-align: center;
+//     color: @dark-color;
+//     background-color: @light-grey;
+//     margin-left: 30px;
+// }
 
-.advantages__description {
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 1.71;
-    text-align: center;
-    color: @dark-color;
-    background-color: @light-grey;
-}
+// .advantages__description {
+//     font-size: 14px;
+//     font-weight: normal;
+//     line-height: 1.71;
+//     text-align: center;
+//     color: @dark-color;
+//     background-color: @light-grey;
+// }
 
-.advantages__iphone {
-    margin-left: 100px;
-    background-color: @light-grey;
-}
+// .advantages__iphone {
+//     margin-left: 100px;
+//     background-color: @light-grey;
+// }
 
 
