--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -4,6 +4,7 @@
 @white-color: #ffffff;
 @border-color: #e5e5e5;
 @light-grey: #f2f2f2;
+@black: #000000;
 @tablet-width: 660px;
 @desktop-width: 960px;
 
