--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -63,10 +63,10 @@
         color: @black;
     }
     .advantages__iphone {
-        background-image: url(img/iphone-screen-3.png);
+        background-image: url("img/iphone-screen-3-tablet@1x.png");
         width: 268px;
         height: 547px;
-        object-fit: contain;
+        // object-fit: contain;
     }
 }
 
