--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -23,11 +23,13 @@
 .advantages__mood {
     list-style: none;
     margin-bottom: 40px;
+    padding-top: 100px;
 }
 
 .advantages__description {
     list-style: none;
     margin-bottom: 40px;
+    padding-top: 100px;
 }
 
 @media (min-width: @tablet-width) {
