--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -15,6 +15,10 @@
 }
 
 .advantages__header {
+    font-size: 24px;
+    font-weight: 300;
+    text-align: center;
+    color: @dark-color;
     margin: 0;
     padding: 0;
     margin-bottom: 100px; 
@@ -31,15 +35,26 @@
     margin-bottom: 40px;
     padding-top: 100px;
 }
+.advantages__iphone {
+    background-image: url("img/iphone-screen-3.png");
+    width: 157px;
+    height: 320px;
+}
+
+.advantages__iphone-tablet {
+    display: none;
+}
 
 @media (min-width: @tablet-width) {
     .advantages__container {
         width: auto;
         display: flex;
-        justify-content: space-between;
+       
 
     }
     .advantages__header {
+        display: flex;
+        justify-content: space-between;
         font-size: 40px;
         font-weight: 300;
         font-style: normal;
@@ -64,13 +79,16 @@
         text-align: left;
         color: @black;
     }
-    .advantages__iphone {
+    .advantages__iphone img {
+        display: none;
+    }
+    .advantages__iphone-tablet {
         background-image: url("img/iphone-screen-3-tablet@1x.png");
         width: 268px;
         height: 547px;
-        // object-fit: contain;
     }
 }
+
 
 
  
