--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -27,8 +27,14 @@
     position: absolute;
     left: 20px;  
 }
+.page-main__iphone-tablet {
+    display: none;
+}
 
 .btn__iphone {
+    font-size: 18px;
+    font-weight: bold;
+    color: @white-color;
     width: 281px;
     height: 55px;
     padding: 20px 39px;
@@ -46,7 +52,15 @@
         display: flex;
         justify-content: space-around;
         width: auto;
+    }
+    .page-main__iphone-tablet {
+        background-image: url(img/iphone-hand-tablet@1x.png);
+        width: 150px;
+        height: 450px;
 
+    }
+    .page-main__iphone {
+        display: none;
     }
 }
     // .page-main {
