--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -6,7 +6,16 @@
     background-color: @dark-color;
     line-height: 1.71;
     text-align: center;
-    
-    
-      
+  
+}
+
+@media (min-width: @tablet-width) {
+    .description {
+        display: flex;
+        margin-left: auto;
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 1.33;
+        color: @white-color;
+    }
 }
