--- a/source/less/blocks/applications-page.less
+++ b/source/less/blocks/applications-page.less
@@ -4,6 +4,10 @@
   
 }
 
+.applications-wrapper {
+    display: none;
+}
+
 
 
 
@@ -12,6 +16,9 @@
         display: flex;
         justify-content: space-around;
         width: auto;
+    }
+    .applications-page {
+        display: none;
     }
 }
 
