--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,38 +1,89 @@
-.reviews {
-    width: 276px;
-    height: 165px;
+.reviews__wrapper {
+    margin: 0 auto;
+    padding-top: 30px;
+  }
+
+  .reviews__title {
+    margin: 0;
+    margin-bottom: 28px;
+  
+    /* Временно для сетки */
+    min-height: 30px;
+  }
+
+  .reviews__list {
+    /* Временно для сетки */
+    min-height: 150px;
+  }
+
+  @media (min-width: @tablet-width) {
+    .reviews__wrapper {
+        width: 640px;
+        padding: 0;
+    
+        /* Временно для сетки */
+        min-height: 245px;
+      }
+      .reviews__title {
+        margin-right: 200px;
+        margin-bottom: 43px;
+    
+        /* Временно для сетки */
+        min-height: 40px;
+      }
+      .reviews__list {
+        /* Временно для сетки */
+        min-height: 160px;
+      }
+      @media (min-width: @desktop-width) {
+        .reviews__wrapper {
+            width: 960px;
+          }
+          .reviews__title {
+            margin-left: 70px;
+        }
+    }
 
 
-}
 
-.reviews__author-name {
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 1.67;
-    text-align: center;
-    color: var(--black-two);
-}
 
-.reviews__text {
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 2.14;
-    text-align: center;
-    color: var(--dark);
-    margin-bottom: 100px;
-}
 
-.reviews__toggles {
-    display: flex;
-    justify-content: center;
-    margin-top: 42px;
-}
 
-.slider__toggle {
-    width: 6px;
-    height: 6px;
-    border: solid 3px var(--dark);
-    background-color: var(--white);
-}
+// .reviews {
+//     width: 276px;
+//     height: 165px;
+
+
+// }
+
+// .reviews__author-name {
+//     font-size: 18px;
+//     font-weight: bold;
+//     line-height: 1.67;
+//     text-align: center;
+//     color: var(--black-two);
+// }
+
+// .reviews__text {
+//     font-size: 14px;
+//     font-weight: normal;
+//     line-height: 2.14;
+//     text-align: center;
+//     color: var(--dark);
+//     margin-bottom: 100px;
+// }
+
+// .reviews__toggles {
+//     display: flex;
+//     justify-content: center;
+//     margin-top: 42px;
+// }
+
+// .slider__toggle {
+//     width: 6px;
+//     height: 6px;
+//     border: solid 3px var(--dark);
+//     background-color: var(--white);
+// }
 
 
