--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,10 +1,11 @@
 .page-main {
      background-color: @dark-color;
+     margin-top: -100px;
 }
 
-.page-main__example {
-    margin: 0 auto;
-}
+// .page-main__example {
+//     margin: 0 auto;
+// }
 
 .page-main__name {
     font-size: 24px;
@@ -13,8 +14,8 @@
     line-height: normal;
     text-align: center;
     color: @white-color;
-    margin-right: 170px;
-    margin-top: 51px;
+    // margin-right: 170px;
+    // margin-top: 51px;
     position: absolute;
     left: 70px;
 }
