--- a/source/less/blocks/applications-page.less
+++ b/source/less/blocks/applications-page.less
@@ -1,11 +1,12 @@
 .applications-page {
-    display: flex;
-    justify-content: space-around;
+    margin: 0 auto;
+    list-style: none;
   
 }
 
 .applications-wrapper {
-    display: none;
+    display: flex;
+    justify-content: space-around;
 }
 
 
