--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,11 +1,10 @@
 .page-main {
-     background-color: @dark-color;
-     
+     background-color: @dark-color;     
 }
 
-.page-main__example {
-     margin: 0 auto;
- }
+// .page-main__example {
+    
+//  }
 
 .page-main__name {
     font-size: 24px;
@@ -14,19 +13,19 @@
     line-height: normal;
     text-align: center;
     color: @white-color;
-    margin-right: 170px;
-     margin-top: 51px;
-    position: absolute;
-    left: 70px;
+    margin-left: 50px;
+    margin-right: 50px;
+     margin-top: 28px;
+    
 }
 
 .page-main__iphone {
     background-image: url(img/iphone-5-in-hand-png.png);
     height: auto;
-    margin-right: 230px;
-    margin-top: 100px;
-    position: absolute;
-    left: 20px;  
+    margin-right: 50px;
+    margin-left: 50px;
+    // position: absolute;
+    // left: 20px;  
 }
 .page-main__iphone-tablet {
     display: none;
@@ -42,9 +41,9 @@
     border: 3px solid @white-color;
     border-radius: 30%;
     text-align: center;
-    position: absolute;
-    left: 20px;
-    bottom: -240px;
+    // position: absolute;
+    // left: 20px;
+    // bottom: -240px;
 }
 
 
