--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,5 +1,6 @@
 .page-main {
-     background-color: @dark-color;     
+     background-color: @dark-color; 
+     width: auto;    
 }
 
 // .page-main__example {
@@ -15,13 +16,13 @@
     color: @white-color;
     margin-left: 50px;
     margin-right: 50px;
-     margin-top: 28px;
-    
+     margin-top: 28px; 
 }
 
 .page-main__iphone {
     background-image: url(img/iphone-5-in-hand-png.png);
-    height: auto;
+    width: 320px;
+    height: 314px;
     margin-right: 50px;
     margin-left: 50px;
     // position: absolute;
@@ -41,6 +42,7 @@
     border: 3px solid @white-color;
     border-radius: 30%;
     text-align: center;
+    margin-top: 70px;
     // position: absolute;
     // left: 20px;
     // bottom: -240px;
@@ -62,6 +64,24 @@
     .page-main__iphone {
         display: none;
     }
+    .page-main__name {
+        font-size: 40px;
+        font-weight: 300;
+        text-align: center;
+        color: @white-color;
+        margin-right: 78px;
+        margin-top: 103px;
+        margin-bottom: 39px;
+    }
+    .btn__iphone {
+        width: 300px;
+        height: 55px;
+        border: solid 3px @white-color;
+        font-size: 18px;
+        font-weight: bold;
+
+    }
+    
 }
     // .page-main {
     //     display: flex;
