--- a/source/less/blocks/applications-page.less
+++ b/source/less/blocks/applications-page.less
@@ -14,13 +14,13 @@
 
 
 @media (min-width: @tablet-width) {
-    .applications-wrapper {
+    .applications-wrapper li {
         display: flex;
         justify-content: space-around;
         width: auto;
     }
-    .applications-page {
-        display: none;
-    }
+    // .applications-page {
+    //     display: none;
+    // }
 }
 
