--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,6 +1,6 @@
 .page-main {
      background-color: @dark-color; 
-     width: auto;    
+        
 }
 
 // .page-main__example {
@@ -50,21 +50,25 @@
 
 
 @media (min-width: @tablet-width) {
+    .page-main {
+        display: flex;
+    }
     .page-main__example {
         display: flex;
-        justify-content: space-around;
-        width: auto;
     }
+
     .page-main__iphone-tablet {
         background-image: url(img/iphone-hand-tablet@1x.png);
         width: 150px;
         height: 450px;
+        margin-left: auto;
 
     }
     .page-main__iphone {
         display: none;
     }
     .page-main__name {
+        display: flex;
         font-size: 40px;
         font-weight: 300;
         color: @white-color;
@@ -73,6 +77,7 @@
         margin-bottom: 39px;
     }
     .btn__iphone {
+        display: flex;
         width: 300px;
         height: 55px;
         border: solid 3px @white-color;
