--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -11,6 +11,16 @@
     padding-bottom: 20px;
 }
 
+.btn-header__burger {
+    content: "";
+    position: absolute;
+    top: 44px;
+    left: 20px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
 .page-header__close {
     content: "";
     position: absolute;
