--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -16,6 +16,7 @@
     position: absolute;
     top: 44px;
     left: 20px;
+    float: left;
     background: transparent;
     border: none;
     cursor: pointer;
