--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -4,23 +4,24 @@
 
 }
 
-.page-header__logo {
-    display: block;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
+// .page-header__logo {
+//     display: flex;
+//     padding-left: 20px;
+//     padding-top: 20px;
+//     padding-bottom: 20px;
+// }
 
-.btn-header__burger {
-    content: "";
-    position: absolute;
-    top: 44px;
-    left: 20px;
-    float: left;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-}
+// .btn-header__burger-icon {
+//     // content: "";
+//     // position: absolute;
+//     // top: 44px;
+//     // left: 20px;
+//     display: flex;
+//     margin-left: auto;
+//     background: transparent;
+//     border: none;
+//     cursor: pointer;
+// }
 
 .page-header__close {
     content: "";
