--- a/source/less/blocks/gallery-page.less
+++ b/source/less/blocks/gallery-page.less
@@ -2,10 +2,18 @@
     background-color: @dark-color;
 }
 
-.first-photo {
-    width: 320px;
-    height: 462px; 
-}
+// .first-photo {
+//     width: 320px;
+//     height: 462px; 
+// }
+
+.gallery-page__text {
+        font-size: 14px;
+        font-weight: normal;
+        line-height: 2.14;
+        text-align: center;
+        color: #fff;
+      }
 
 .tablet-photo {
     display: none;
